@@ -20,6 +20,9 @@ Revision history for Perl extension XML::LibXSLT.
     - In the process made "Encode" and perl-5.8.1. pre-requisites of this
     distribution.
 
+    - Add the "make runtest" and "make distruntest" targets to test using
+    Test-Run.
+
 1.73            Sun Oct  9 17:32:30 IST 2011
     - Possible fix for https://rt.cpan.org/Ticket/Display.html?id=71456 :
         - made the port reservation on t/14security.t for the non-existent
